--- a/package.json
+++ b/package.json
@@ -14,20 +14,15 @@
     "test": "pnpm -r test"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.14",
     "@types/react-dom": "^19.1.9",
     "concurrently": "^8.2.0",
     "eslint": "^9.36.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.4.0",
     "prettier": "^3.4.2",
     "tsx": "^4.19.2",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.44.1",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "packageManager": "pnpm@10.14.0",
@@ -38,6 +33,9 @@
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "tailwindcss": "^4.1.13",
+    "clsx": "2.1.1",
+    "tailwind-merge": "^3.3.1"
   }
 }
