--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -2,5 +2,13 @@
   "name": "eslint-config",
   "private": true,
   "version": "0.1.0",
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@eslint/js": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.22",
+    "typescript-eslint": "^8.45.0"
+  }
 }
