refactor: update ts configuration for improved module handling and strictness

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,12 +1,10 @@
 {
   "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "module": "commonjs",
-    "declaration": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "noEmit": false,
-    "verbatimModuleSyntax": false,
-    "strictPropertyInitialization": false
-  }
+  "files": [],
+  "include": [],
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
+    }
+  ]
 }
