--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,15 @@
 {
-  "name": "utils",
+  "name": "@boilerplate/utils",
   "private": true,
   "version": "0.1.0",
-  "type": "module"
+  "type": "module",
+  "main": "./src/index.ts",
+  "module": "./src/index.ts",
+  "types": "./src/index.ts",
+  "exports": {
+    ".": "./src/index.ts"
+  },
+  "devDependencies": {
+    "@boilerplate/eslint-config": "workspace:*"
+  }
 }
