--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -13,8 +13,10 @@
     "@tailwindcss/vite": "^4.1.13"
   },
   "devDependencies": {
+    "@types/node": "^24.6.2",
     "@vitejs/plugin-react": "^5.0.3",
     "babel-plugin-react-compiler": "^19.1.0-rc.3",
-    "vite": "npm:rolldown-vite@7.1.12"
+    "@boilerplate/ui": "workspace:*",
+    "@boilerplate/eslint-config": "workspace:*"
   }
 }
