--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monorepo",
+  "name": "@boilerplate/source",
   "private": true,
   "workspaces": [
     "apps/*",
@@ -23,19 +23,20 @@
     "prettier": "^3.4.2",
     "tsx": "^4.19.2",
     "typescript": "^5.9.2",
+    "vite": "npm:rolldown-vite@7.1.12",
     "vite-tsconfig-paths": "^5.1.4"
   },
-  "packageManager": "pnpm@10.14.0",
+  "packageManager": "pnpm@10.18.0",
   "pnpm": {
     "overrides": {
       "vite": "npm:rolldown-vite@7.1.12"
     }
   },
   "dependencies": {
+    "clsx": "2.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.13",
-    "clsx": "2.1.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.13"
   }
 }
