--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "eslint-config",
+  "name": "@boilerplate/eslint-config",
   "private": true,
   "version": "0.1.0",
   "type": "module",
+  "main": "./src/index.ts",
+  "module": "./src/index.ts",
+  "types": "./src/index.ts",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
