--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "ui",
+  "name": "@boilerplate/ui",
   "version": "0.1.0",
   "type": "module",
+  "main": "./src/index.ts",
+  "module": "./src/index.ts",
+  "types": "./src/index.ts",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "scripts": {
-    "components:add": "pnpm dlx shadcn@latest add"
+    "components:add": "pnpm exec tsx ./scripts/components-add.ts"
   },
   "targets": {},
   "dependencies": {
@@ -11,5 +17,8 @@
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.544.0",
     "tw-animate-css": "^1.4.0"
+  },
+  "devDependencies": {
+    "@boilerplate/eslint-config": "workspace:*"
   }
 }
